--- a/templates/internet.html
+++ b/templates/internet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>доступ в интернет</title>
+    <title>Доступ в Интернет</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
@@ -11,10 +11,11 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            background-color: #f8f9fa;
         }
 
         .form-control:focus {
-            border-color: black;
+            border-color: #000000;
             box-shadow: none;
             outline: 0;
         }
@@ -22,6 +23,7 @@
         .btn-dark {
             background-color: #000000;
             color: white;
+            transition: background-color 0.3s, border-color 0.3s;
         }
 
         .btn-dark:hover {
@@ -36,12 +38,7 @@
         }
 
         .form-control {
-            border-color: black;
-        }
-
-        .btn-dark {
-            background-color: black;
-            border-color: black;
+            border-color: #000000;
         }
 
         .text-center {
@@ -50,6 +47,11 @@
 
         .container {
             width: 100%;
+            max-width: 400px;
+            padding: 15px 15px 1px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff;
         }
 
         @media (max-width: 768px) {
@@ -67,20 +69,17 @@
 </head>
 <body>
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-md-4 offset-md-4">
-            <form method="POST">
-                <div class="form-group">
-                    <input class="form-control" id="password" maxlength="20" name="password" required type="password">
-                </div>
-                <div class="form-group text-center">
-                    <button class="btn btn-dark" type="submit">
-                        ввод
-                    </button>
-                </div>
-            </form>
+    <h3 class="mb-3 text-center">доступ в интернет</h3>
+    <form method="POST">
+        <div class="form-group">
+            <input class="form-control" id="password" maxlength="20" name="password" placeholder="пароль" required type="password">
         </div>
-    </div>
+        <div class="form-group text-center">
+            <button class="btn btn-dark" type="submit">
+                отправить
+            </button>
+        </div>
+    </form>
 </div>
 <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </body>
