--- a/templates/internet.html
+++ b/templates/internet.html
@@ -72,6 +72,9 @@
     <h3 class="mb-3 text-center">доступ в интернет</h3>
     <form method="POST">
         <div class="form-group">
+            <input class="form-control" id="login" maxlength="20" name="login" placeholder="логин" required type="text">
+        </div>
+        <div class="form-group">
             <input class="form-control" id="password" maxlength="20" name="password" placeholder="пароль" required type="password">
         </div>
         <div class="form-group text-center">
