--- a/templates/squad_wallet.html
+++ b/templates/squad_wallet.html
@@ -4,9 +4,9 @@
     <title>профиль {{ squad }} отряда</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/js/socket.io.min.js"></script>
-    <script src="../static/js/script.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <style>
         body {
