--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
                 <!--                <li><a href="{{ url_for('wallet') }}">баланс отрядов</a></li>-->
                 <li><a data-toggle="modal" data-target="#anonMessage"
                        href="https://getbootstrap.com/docs/4.6/getting-started/build-tools">сообщение в рубку</a></li>
-                <li><a>загрузка фото и видео</a></li>
+                <li><a href="https://files.vympel.one/index.php/s/dsxyx4BLEK24BTR">загрузка фото и видео</a></li>
                 <li><a href="{{ url_for('clicker') }}">кликер презентаций</a></li>
                 {% if is_ph or is_admin %}
             </ul>
