--- a/templates/index.html
+++ b/templates/index.html
@@ -124,8 +124,10 @@
                 <!--                <li><a href="{{ url_for('wallet') }}">баланс отрядов</a></li>-->
                 <li><a data-toggle="modal" data-target="#anonMessage"
                        href="https://getbootstrap.com/docs/4.6/getting-started/build-tools">сообщение в рубку</a></li>
-                <li><a href="https://files.vympel.one/index.php/s/dsxyx4BLEK24BTR">загрузка фото и видео</a></li>
-                <li><a href="{{ url_for('clicker') }}">кликер презентаций</a></li>
+                <li><a href="https://files.vympel.one/index.php/s/swaPSMnMe4YkCfj">загрузка фото и видео</a></li>
+                <li><a href="https://files.vympel.one/index.php/s/tjcRxHmTXAnnq6m">миниклубы</a></li>
+<!--                <li><a href="https://files.vympel.one/index.php/s/oGA5tGJpN9m8yRg">переделки гномиков</a></li>-->
+                <li><a href="{{ url_for('ped') }}">для вожатых</a></li>
                 {% if is_ph or is_admin %}
             </ul>
         </div>
