--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
                 <!--                <li><a href="{{ url_for('wallet') }}">баланс отрядов</a></li>-->
                 <li><a data-toggle="modal" data-target="#anonMessage"
                        href="https://getbootstrap.com/docs/4.6/getting-started/build-tools">сообщение в рубку</a></li>
-                <li><a href="https://files.vympel.one/index.php/s/swaPSMnMe4YkCfj">загрузка фото и видео</a></li>
+                <li><a href="https://files.vympel.one/index.php/s/YFYStB7drjy2GFg">загрузка фото и видео</a></li>
                 <li><a href="https://files.vympel.one/index.php/s/tjcRxHmTXAnnq6m">миниклубы</a></li>
 <!--                <li><a href="https://files.vympel.one/index.php/s/oGA5tGJpN9m8yRg">переделки гномиков</a></li>-->
                 <li><a href="{{ url_for('ped') }}">для вожатых</a></li>
@@ -144,6 +144,9 @@
 <!--                <li><a href="/" onclick="stButtons(event)">старшие</a></li>-->
 <!--                <li><a href="{{ url_for('internet') }}">интернет</a></li>-->
                 <li><a href="{{ url_for('balance_editor') }}">управление балансом</a></li>
+                <li><a href="{{ url_for('ayariva_st') }}">аярива старшие</a></li>
+                <li><a href="{{ url_for('ayariva_ml') }}">аярива младшие</a></li>
+                <li><a href="{{ url_for('autosound') }}">автозвук</a></li>
                 <li><a href="/" onclick="chime(event)">chime</a></li>
                 {% endif %}
             </ul>
