--- a/templates/ped.html
+++ b/templates/ped.html
@@ -40,7 +40,7 @@
         <div class="col-md-6">
             <ul class="icon-list">
                 <li><a href="{{ url_for('clicker') }}">кликер презентаций</a></li>
-                <li><a href="https://files.vympel.one/index.php/s/5CBfoRKPctdTX9H">программы</a></li>
+                <li><a href="https://files.vympel.one/index.php/s/5CBfoRKPctdTX9H">самое необходимое</a></li>
             </ul>
         </div>
     </div>
