--- a/templates/wallet.html
+++ b/templates/wallet.html
@@ -27,7 +27,7 @@
         #squad_1 {
             top: 0;
             left: 0;
-            background: #4542ff;
+            background: #1f99ff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -94,7 +94,6 @@
     </script>
 </head>
 <body>
-
 <div id="squad_1" class="vympel">загрузка...</div>
 <div id="squad_2" class="vympel">загрузка...</div>
 <div id="squad_3" class="vympel">загрузка...</div>
